fix unix line endings